# HiBao

./: Phttp.c  README.md  cjson_init.h  hal_iot_adc.c  iot_adc.h  iot_profile.h  rgb565ToRgb888.py
PC_workspace/: README.md
PC_workspace/ChaGPT-API-Call/: test.py
PC_workspace/ChaGPT-API-Call/config/: chatgpt_config.py
PC_workspace/ChaGPT-API-Call/src/: openai_request.py
PC_workspace/ChaGPT-API-Call/tools/: cfg_wrapper.py  context.py  utils.py
Pegasus_workspace/: BUILD.gn  README copy.md  README.md  dht11.c  iot_main.c  iot_profile.c  thread.c  uart_control.c
Pegasus_workspace/app_demo/: dht11.h  iot_config.h  uart_control.h
Pegasus_workspace/dht11_demo/: BUILD.gn  dht11.c
Pegasus_workspace/infrared_demo/: BUILD.gn  infrared.c
Raspiberry_workspace/: 00_uart_open.sh  01_server_open.sh  02_iat_open.sh
Raspiberry_workspace/RGB_Demo/: blue_speak.py  blue_speak.sh  change_color.py  change_color.sh  green_breath.py  green_breath.sh  include.py  red_spark.py  red_spark.sh  set_none.py
Raspiberry_workspace/Speaker_Demo/: Speech.py  speaker_server.py
Raspiberry_workspace/iat_Demo/src/: 64bit_make.sh  Makefile  iat_online_record_sample.c
Raspiberry_workspace/uart_demo/: T2.py  uart.py
Taurus_workspace/ai_sample/dependency/: audio_test.h
Taurus_workspace/ai_sample/ext_util/: base_interface.c  base_interface.h  misc_util.c  posix_help.h
Taurus_workspace/ai_sample/smp/: sample_media_ai.h
ai_sample/ai_infer_process/: ai_infer_process.c  ai_infer_process.h
ai_sample/dependency/: audio_test.c
ai_sample/ext_util/: misc_util.h  posix_help.c
ai_sample/interconnection_server/: hisignalling.c  hisignalling.h
ai_sample/mpp_help/src/: vgs_img.c
ai_sample/scenario/hand_classify/: hand_classify.c  hand_classify.h
ai_sample/smp/: sample_ai_main.cpp  sample_media_ai.c
demo_uart+mqtt/: BUILD.gn  app_demo_iot.c  main.c
(+12 files in other folders)
